1.Field_Rowset_Base->select(): added fix for further-foreign fields 2.indi.layout.css: added styles for jumps, tips and colorbox combinations 3.action/Grid.js:rowsetPlugin$Cellediting: dataIndex is now passed as 4th arg to recordRemoteSave() 4.action/Rowset.js:recordRemoteSave(): added `cell` as 4th arg, for being added to uri 5.override/Ext.grid.plugin.Editing.js: prevent editor from being shown if click was made on el having 'jump' attr 6.indi.js: added rif(), wrap() and jump() functions 7.*_Admin->saveAction(): added onBeforeCellSave($cell, Indi::post($cell)) call for cases when Indi::uri()->cell given 8.*_Admin: added prompt() and onBeforeCellSave() definitions 9.*_Admin->inclGridProp(): added $this->exclGridProp() call to prevent duplicates

--- a/css/admin/indi.layout.css
+++ b/css/admin/indi.layout.css
@@ -19,6 +19,9 @@
     top: 2px;
     vertical-align: text-bottom;
 }
+.x-grid-cell-inner > span[title] {border-bottom: 1px dotted;}
+.x-grid-cell-inner > span[title][jump] {border-bottom: 1px dashed; text-decoration: none;}
+.x-grid-cell-inner > span.i-color-box[title][jump] {border-bottom: none;}
 .i-bgimg-box-wrap .i-color-box[style*="background: url"]{
     vertical-align: text-bottom;
 }
